// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the NavLinks Component should match snapshot 1`] = `
<ul>
  <li>
    <Link
      replace={false}
      to="/"
    >
      Dashboard
    </Link>
  </li>
  <li>
    <Link
      replace={false}
      to="/categories"
    >
      Categories
    </Link>
  </li>
  <li>
    <Link
      replace={false}
      to="/products"
    >
      Products
    </Link>
  </li>
  <li>
    <Link
      replace={false}
      to="/cart"
    >
      My Cart 
    </Link>
  </li>
  <li
    onClick={[Function]}
    role="presentation"
  >
    <Link
      replace={false}
      to="/login"
    >
      Logout
    </Link>
  </li>
</ul>
`;

exports[`Test the NavLinks Component should match snapshot 2`] = `
<ul>
  <li>
    <Link
      replace={false}
      to="/"
    >
      Dashboard
    </Link>
  </li>
  <li>
    <Link
      replace={false}
      to="/categories"
    >
      Categories
    </Link>
  </li>
  <li>
    <Link
      replace={false}
      to="/products"
    >
      Products
    </Link>
  </li>
  <li>
    <Link
      replace={false}
      to="/attendants"
    >
      Attendants
    </Link>
  </li>
  <li
    onClick={[Function]}
    role="presentation"
  >
    <Link
      replace={false}
      to="/login"
    >
      Logout
    </Link>
  </li>
</ul>
`;
